# app/contexts/order/api/OrderedItem.java
@@ -1,0 +1,13 @@
+package contexts.order.api;
+
+public class OrderedItem {
+    private String productId;
+    private Integer quantity;
+
+    public OrderedItem(String productId, Integer quantity) {
+        this.productId = productId;
+        this.quantity = quantity;
+    }
+
+    public OrderedItem() { }
+}
