# conf/swagger.yml
@@ -18,8 +18,8 @@ info:
 tags:
 - name: ui
   description: operations for ReCommerce UI
-schemes:
-- http
+# schemes:
+# - http
 paths:
   /api/products:
     get:
@@ -86,6 +86,18 @@ definitions:
   Order:
     type: object
     required:
+    - shippingInfo
+    - items
+    properties:
+      shippingInfo:
+        $ref: '#/definitions/ShippingInfo'
+      items:
+        type: array
+        items:
+          $ref: '#/definitions/OrderedItem'
+  ShippingInfo:
+    type: object
+    required:
     - firstName
     - lastName
     - emailAddress
@@ -94,7 +106,6 @@ definitions:
     - province
     - country
     - postalCode
-    - items
     properties:
       firstName:
         type: string
@@ -123,10 +134,6 @@ definitions:
       postalCode:
         type: string
         example: M5A0E3
-      items:
-          type: array
-          items:
-            $ref: '#/definitions/OrderedItem'
   OrderedItem:
     type: object
     required:
